<resources>
    <string name="app_name">Droning</string>
    <string name="pre_site_survey">Pre Site Survey</string>
    <string name="pre_flight_checklists">Pre Flight checklists</string>
    <string name="operational_flight_plan">Operational Flight Plan</string>
    <string name="on_site_survey">On Site Survey</string>
    <string name="maintenance_log">Maintenance Log</string>
    <string name="incident_log">Incident Log</string>
    <string name="embarkation_checklist">Embarkation checklist</string>
    <string name="battery_log">Battery Log</string>
    <string name="arrival_and_post_flight_checklist">Arrival and Post flight checklist</string>
    <string name="aircraft_pilot_and_crew_flight_logs">Aircraft pilot and crew flight logs</string>
    <string name="studentennaam">Studentennaam</string>
    <string name="reden">Reden</string>
    <string name="work_done">Work done</string>
    <string name="parts_replaced">Parts replaced</string>
    <string name="system_tested">System tested</string>
    <string name="submit">Submit</string>
    <string name="go_back">Go Back</string>
    <string name="battery_number">Battery number</string>
    <string name="battery_residual">Battery residual</string>
    <string name="date_of_charge">Date of charge</string>
    <string name="charge_input">Charge input</string>
    <string name="flight_duration">Flight duration</string>
    <string name="pre_flight">Pre-flight</string>
    <string name="notes">notes</string>
    <string name="injuries_damage">Injuries / damage</string>
    <string name="incident_details">Incident details</string>
    <string name="action_taken_incident_report">Action taken / incident report</string>
    <string name="date_of_incident">Date of incident</string>
    <string name="time_of_incident">Time of incident</string>
    <string name="first_aid_kit">First aid kit</string>
    <string name="two_way_radios">Two way radios</string>
    <string name="site_survey">Site survey</string>
    <string name="flight_plan_brief">Flight plan / brief</string>
    <string name="a_v_connections">A/V connections</string>
    <string name="propellers">Propellers</string>
    <string name="ground_station">Ground station</string>
    <string name="crew_identification_badges">Crew identification badges</string>
    <string name="a_v_monitor">A/V monitor</string>
    <string name="hard_hat_fluorescent_jackets">Hard hat / fluorescent jackets</string>
    <string name="fire_extinguisher">Fire extinguisher</string>
    <string name="cordens_signs_amp_safety_tape"><![CDATA[Cordens, signs & safety tape]]></string>
    <string name="carry_out_site_survey_with_observer">Carry out site survey with observer</string>
    <string name="confirm_flight_plan_amp_brief_crew_observer_amp_client"><![CDATA[Confirm flight plan & brief crew, observer & client]]></string>
    <string name="unload_amp_check_airframe_for_any_damage_in_transit"><![CDATA[Unload & check airframe for any damage in transit]]></string>
    <string name="attach_to_platform_amp_fit_safety_lanyard"><![CDATA[Attach to platform & fit safety lanyard]]></string>
    <string name="insert_a_v_plug_and_secure">Insert A/V plug and secure</string>
    <string name="position_as_required_amp_ensure_level_with_spirit_level"><![CDATA[Position as required & ensure level with spirit level]]></string>
    <string name="setup_switch_on_and_test_operation">Setup, switch on and test operation</string>
    <string name="issue_as_required">Issue as required</string>
    <string name="postion_easy_accessible_amp_inform_crew_of_location"><![CDATA[Postion easy accessible & inform crew of location]]></string>
    <string name="positon_required_to_mantanin_safe_flying_zone">Positon required to mantanin safe flying zone</string>
    <string name="postion_requiered_to_maintain_safe_operation">Postion requiered to maintain safe operation</string>
    <string name="check_securing_nuts_for_tightness_replace_if_removed">Check securing nuts for tightness (replace if removed)</string>
    <string name="check_for_damage_wear">Check for damage, wear, tightness of fittings, condition and secure fitment of propellers and secure attachment of camera</string>
    <string name="transmitter">Transmitter</string>
    <string name="data_recording">Data recording</string>
    <string name="removal">Removal</string>
    <string name="power_down">Power down</string>
    <string name="touchdown">Touchdown</string>
    <string name="camera">Camera</string>
    <string name="airframe">Airframe</string>
    <string name="battery">Battery</string>
    <string name="memory_card">Memory card</string>
    <string name="review">Review</string>
    <string name="upon_touchdown_immidiately_stop_left_transmitter_stick_to_bottom_left_corner">Upon touchdown immidiately stop (left transmitter stick to bottom left corner)</string>
    <string name="walk_to_aircraft_disconnect_flight_battery_and_call_safe">Walk to aircraft, disconnect flight battery and call SAFE</string>
    <string name="remove_aircraft_from_landing_area">Remove aircraft from landing area</string>
    <string name="record_flight_time_details_in_pilot_logbook_amp_battery_logbook"><![CDATA[Record flight time details in pilot logbook & battery logbook]]></string>
    <string name="switch_off_transmitter">Switch off transmitter</string>
    <string name="stop_recording_and_switch_off">Stop recording and switch off</string>
    <string name="remove_flight_battery_from_aircraft"><![CDATA[Remove flight battery from aircraft, check residual battery %, record details in battery logbook & place on charge in lipo safe bag provided that the battery is not warm (if so allow to cool first)]]></string>
    <string name="remove_from_camera_and_back_up_to_ground_station">Remove from camera and back up to ground station</string>
    <string name="review_images_and_discuss_with_crew_and_or_client_if_required">review images and discuss with crew and/or client if required</string>
    <string name="item">Item</string>
    <string name="ground_station_amp_leads"><![CDATA[Ground station & leads]]></string>
    <string name="camera_monitor_amp_leads"><![CDATA[Camera monitor & leads]]></string>
    <string name="a_v_receiver_amp_leads"><![CDATA[A/V receiver & leads]]></string>
    <string name="telemetry_receiver_amp_leads"><![CDATA[Telemetry receiver & leads]]></string>
    <string name="laptop_amp_leads"><![CDATA[Laptop & leads]]></string>
    <string name="mobile_phone_amp_emergency_no_s"><![CDATA[Mobile phone & emergency no\'s]]></string>
    <string name="anemometer">Anemometer</string>
    <string name="first_aid_kit_amp_fire_extinguisher"><![CDATA[First aid kit & fire extinguisher]]></string>
    <string name="crew_identification">Crew identification</string>
    <string name="fluorescent_jacket_s_hard_hats">Fluorescent jacket(s) / hard hats</string>
    <string name="clothing_boots_coat_gloves">Clothing (boots, coat, gloves)</string>
    <string name="flight_battery_packs">Flight battery packs</string>
    <string name="signs_safety_tape_cones">Signs, safety tape, cones</string>
    <string name="camera_mount">Camera mount</string>
    <string name="ground_station_battery">Ground station battery</string>
    <string name="transmitter_battery_packs">Transmitter battery packs</string>
    <string name="site_assessment_from">Site assessment from</string>
    <string name="camera_battery_packs">Camera battery packs</string>
    <string name="flight_controller_transmitter_s">Flight controller / transmitter(s)</string>
    <string name="camera_s_amp_lens_s"><![CDATA[Camera(s) & lens(s)]]></string>
    <string name="calibration_platform">Calibration platform</string>
    <string name="mobile_phone_battery">Mobile phone battery</string>
    <string name="camera_connection_leads">Camera connection leads</string>
    <string name="action_check">Action / check</string>
    <string name="tick">Tick</string>
    <string name="flight_battery">Flight battery</string>
    <string name="transmitter_s">Transmitter(s)</string>
    <string name="self_diagnostic">Self diagnostic</string>
    <string name="monitor">Monitor</string>
    <string name="calibration">Calibration</string>
    <string name="save_calibration">Save calibration</string>
    <string name="camera_platform">Camera platform</string>
    <string name="telemetry_link">Telemetry link</string>
    <string name="flight_plan">Flight plan</string>
    <string name="aircraft_alignment">Aircraft alignment</string>
    <string name="crew_public_amp_client"><![CDATA[Crew, Public & client]]></string>
    <string name="clearence">Clearence</string>
    <string name="power_up">Power up</string>
    <string name="take_off">Take off</string>
    <string name="landing">Landing</string>
    <string name="note_battery_number">Note battery number in battery logbook, record pre-flight battery power % and fit into airframe (no lower than 90%)</string>
    <string name="switch_on_check_battery_power">Switch on, check battery power is within safe parameters, ensure trims are nuetral and all switches are in there correct positions</string>
    <string name="switch_on_and_confirm_correct_operation">Switch on and confirm correct operation</string>
    <string name="ensure_aircraft_is_level_on_the_calibration_platform">ensure aircraft is level on the calibration platform</string>
    <string name="call_clear_props_and_connect_flight_battery">Call \'clear props\' and connect flight battery</string>
    <string name="wait_for_diagnostic_to_finish_amp_gps_lock_to_be_established_flashing_blue_light"><![CDATA[Wait for diagnostic to finish & gps lock to be established (flashing blue light)]]></string>
    <string name="check_function_amp_quality_of_a_v_link_from_camera"><![CDATA[Check function & quality of A/V link from camera]]></string>
    <string name="move_left_transmitter_stick_to_top_left_corner_amp_wait_for_beep"><![CDATA[Move left transmitter stick to top left corner & wait for beep]]></string>
    <string name="move_left_transmitter_stick_to_top_right_corner_amp_wait_for_beep"><![CDATA[move left transmitter stick to top right corner & wait for beep]]></string>
    <string name="test_for_contol_and_operation">Test for contol and operation</string>
    <string name="ensure_ground_station_and_transmitter_displays_are_connected">Ensure ground station and transmitter displays are connected</string>
    <string name="load_in_flight_plan_from_ground_station_if_required_beep_for_each_waypoint">Load in flight plan from ground station if required (beep for each waypoint)</string>
    <string name="start_recording">Start recording</string>
    <string name="reposition_aircraft_in_take_off_area_on_level_ground_facing_into_wind">Reposition aircraft in take off area on level ground facing into wind</string>
    <string name="ensure_all_crew_public_amp_client_are_in_correct_safe_positions"><![CDATA[Ensure all crew, Public & client are in correct safe positions]]></string>
    <string name="do_we_have_clearence_from_air_traffic_control_if_required">Do we have clearence from air traffic control if required</string>
    <string name="call_taking_off_and_start_motors_left_transmitter_stick_to_bottom_right_corner">Call \'taking off\' and start motors (left transmitter stick to bottom right corner)</string>
    <string name="take_one_final_quick">Take one final quick look around, check with obserber that they agree it is safe to fly, power up and take off</string>
    <string name="throughout_entire_flight">Throughout entire flight stay in audiable contact with observer listen for battery warnings, airspace infringements or public encroachments</string>
    <string name="before_landing_check">Before landing, check with obserber, hover over landing area, take a quick look below aircraft and call \'landing\' and then land</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="communication">Communication</string>
</resources>