<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sub_background"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/StudentennaamText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/studentennaam" />

            <EditText
                android:id="@+id/StudentennaamEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/RedenText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reden" />

            <EditText
                android:id="@+id/RedenEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/WorkDoneText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/work_done" />

            <EditText
                android:id="@+id/WorkDoneEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/PartsReplacedText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/parts_replaced" />

            <EditText
                android:id="@+id/PartsReplacedEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/SystemTestedText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/system_tested" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <RadioButton
                    android:id="@+id/SystemTestedYes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/SystemTestedNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/no" />
            </RadioGroup>

            <TextView
                android:id="@+id/NotesText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notes" />

            <EditText
                android:id="@+id/NotesEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/SubmitBTN"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/submit" />

                <Button
                    android:id="@+id/GoBackBTN"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="toHome"
                    android:text="@string/go_back" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>